--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "babylonjs": "^6.32.1",
-    "earcut": "^2.2.4"
+    "earcut": "^2.2.4",
+    "gsap": "^3.12.3"
   }
 }
